@@ -1613,3 +1613,136 @@ current frame and raise it."
 (define-stumpwm-command "syncplace" ()
   (sync-window-placement))
 
+
+;;; Layout save and restore routines.
+
+(defun frame-dumper (f)
+  (format nil "#S(frame :number ~d :x ~d :y ~d :width ~d :height ~d)"
+	  (frame-number f)
+	  (frame-x f)
+	  (frame-y f)
+	  (frame-width f)
+	  (frame-height f)))
+
+(defun frame-dump (tree)
+  (labels ((copy (tree)
+		 (cond ((null tree) tree)
+		       ((typep tree 'frame)
+			(frame-dumper tree))
+		       (t
+			(mapcar 'frame-dump tree)))))
+	  (copy tree)))
+
+(defun dump-to-file (foo name)
+  (with-open-file (fp name :direction :output :if-exists :supersede)
+		  (with-standard-io-syntax
+		   (let ((*package* (find-package :stumpwm))
+			 (*print-pretty* t))
+		     (princ foo fp)))))
+
+(define-stumpwm-command "fdump" ((file :rest))
+  "Dumps the frames of the current group of the current screen to the named file."
+  (dump-to-file (frame-dump (tile-group-frame-tree (current-group))) file)
+  (message "Frames dumped"))
+
+(defun dump-all-groups-in-screen (screen)
+  (mapcar (lambda (group) 
+	    (list (format nil "\"~a\"" (group-name group)) (frame-dump (tile-group-frame-tree group))))
+	  (sort (copy-list (screen-groups screen)) '< :key 'group-number)))
+
+(define-stumpwm-command "afdump" ((file :rest))
+  "Dumps the frames of all groups of the current screen to the named file"
+  (dump-to-file (dump-all-groups-in-screen (current-screen)) file)
+  (message "Frames dumped"))
+
+(define-stumpwm-command "asfdump" ((file :rest))
+  "Dumps the frames of all groups of all screens to the named file"
+  (dump-to-file
+   (mapcar (lambda (screen)
+	     (list (screen-id screen) (dump-all-groups-in-screen screen)))
+	   *screen-list*)
+   file)
+  (message "Frames dumped"))
+
+(defun restore-from-file (file)
+  (with-open-file (fp file :direction :input)
+		  (with-standard-io-syntax
+		   (let ((*package* (find-package :stumpwm)))
+		     (read fp)))))
+
+(defun populate-frames (group)
+  "Try to fill empty frames in GROUP with hidden windows"
+  (dolist (f (group-frames group))
+    (unless (frame-window f)
+      (choose-new-frame-window f group)
+      (when (frame-window f)
+	(unhide-window (frame-window f))))))
+
+(defun frame-restore (group frames)
+  (labels 
+   ((tree-frames (tree)
+		 (tree-accum-fn tree 'nconc 'list))
+    (get-frame-by-number (tree n)
+			 (find n
+			       (tree-frames tree)
+			       :key (lambda (f)
+				      (frame-number f))
+			       :test '=)))
+   (let ((default (get-frame-by-number frames 0))
+	 (focused-window (group-current-window group)))
+     ;; Do a frame-number-wise mapping of windows before and
+     ;; after the restore.
+     (dolist (w (group-windows group))
+       (setf (window-frame w)
+	     (or
+	      (dolist (f2 (tree-frames frames))
+		(when (= (frame-number f2) (frame-number (window-frame w)))
+		  (when (eq (frame-window (window-frame w)) w)
+		    (setf (frame-window f2) w))
+		  (return f2)))
+	      default))
+       (message "Assigning window ~d to frame ~d of group ~a" (window-number w)
+		(frame-number (window-frame w)) (group-name group)))
+     (setf (tile-group-current-frame group) default
+	   (tile-group-last-frame group) default)
+     ;; FIXME: call new-window-prefered-frame hook?
+     ;; restore the tree
+     (setf (tile-group-frame-tree group) frames)
+     ;; ensure that the same window which had focus before the restore gets it afterwards.
+     (when focused-window
+       (setf (tile-group-current-frame group) (window-frame focused-window))
+       (focus-window focused-window))))
+  (populate-frames group)
+  ;; update windows
+  (sync-all-frame-windows group))
+
+(define-stumpwm-command "frestore" ((file :rest))
+  "Restores frames in current group of current screen from named file."
+  (frame-restore (current-group) (restore-from-file file))
+  (message "Frames restored"))
+
+(defun restore-all-groups-in-screen (screen group_list)
+  "Restore all frames in all groups of given screen. Create groups if
+ they don't already exist."
+  (dolist (gdesc group_list)
+    (destructuring-bind (group-name frames) gdesc
+			(frame-restore (or	(find-group screen group-name)
+						(add-group screen group-name)) frames))))
+
+(define-stumpwm-command "afrestore" ((file :rest))
+  "Restores frames in all groups of current screen from named file."
+  (restore-all-groups-in-screen (current-screen) (restore-from-file file))
+  (message "Frames restored"))
+
+(defun screen-by-id (id)
+  (find id
+	*screen-list*
+	:key (lambda (s)
+	       (screen-id s))
+	:test '=))
+
+(define-stumpwm-command "asfrestore" ((file :rest))
+  "Restores frames in all groups of all screens from named file."
+  (dolist (screen (restore-from-file file))
+    (restore-all-groups-in-screen (screen-by-id (first screen)) (second screen))
+    (message "Frames restored")))
