@@ -5,6 +5,8 @@ This file documents user visible changes between versions of StumpWM
 * Changes since 0.0.6
 These changes are probably incomplete
 
+** added frame save and restore
+
 ** added rule based window placement
 
 ** stumpwm now handles window roles
